--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -27,7 +27,7 @@
               >
             </li>
             <li class="nav__item__dropdown__search header_menu_trigger _pc">
-              <a class="font-15px">目的から探す</a>
+              <a class="font-15px"><span>目的から探す</span></a>
               {% include 'component/icons/arrow-down.njk' %}
               <div class="nav__dropdown__list__search sub-menu pc-only">
                 <div class="nav__dropdown__search">
@@ -80,7 +80,7 @@
               </div>
             </li>
             <li class="nav__item__dropdown__support header_menu_trigger _pc">
-              <a class="font-15px">サポート情報</a>
+              <a class="font-15px"><span>サポート情報</span></a>
               {% include 'component/icons/arrow-down.njk' %}
               <div class="nav__dropdown__list__support sub-menu pc-only">
                 <div class="nav__dropdown__search">
@@ -105,7 +105,7 @@
                   </ul>
                   <ul class="nav__dropdown__list__secondary">
                     <li>
-                      <a href="/faq_list">
+                      <a href="/faq">
                         <span>よくある質問</span>
                         {% include 'component/icons/arrow-right-long.njk' %}
                       </a>
@@ -145,8 +145,8 @@
           <span>個人事業主様向け</span>
         </a>
       </li>
-      <li class="nav__item__dropdown__search _sp">
-        <span>目的から探す</span>
+      <li class="nav__item__dropdown__search header_menu_trigger _sp">
+        <a><span>目的から探す</span></a>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="15.848"
@@ -163,9 +163,69 @@
             stroke-width="3"
           />
         </svg>
+
+        <div class="nav__dropdown__list__search sub-menu sp-only">
+          <div class="nav__dropdown__list">
+            <ul class="nav__dropdown__list__first">
+              <li>
+                <a href="#">
+                  <span>ビジネスカードを作りたい</span>
+                  {% include 'component/icons/arrow-right-long.njk' %}
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span>業務を効率化したい</span>
+                  {% include 'component/icons/arrow-right-long.njk' %}
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span>福利厚生を充実させたい</span>
+                  {% include 'component/icons/arrow-right-long.njk' %}
+                </a>
+              </li>
+
+              <li>
+                <a href="#">
+                  <span>経費を削減したい</span>
+                  {% include 'component/icons/arrow-right-long.njk' %}
+                </a>
+              </li>
+              <li>
+                <a href="/improve_cash_flow">
+                  <span>資金繰りを改善したい</span>
+                  {% include 'component/icons/arrow-right-long.njk' %}
+                </a>
+              </li>
+            </ul>
+
+            <div class="nav__dropdown__back">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 9.198 9.679"
+              >
+                <g
+                  id="矢印アイコン_左3"
+                  data-name="矢印アイコン　左3"
+                  transform="translate(22.934) scale(-1, 1)"
+                >
+                  <path
+                    id="Path_43786"
+                    data-name="Path 43786"
+                    d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                    fill="#00758c"
+                  />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
       </li>
-      <li class="nav__item__dropdown__support _sp">
-        <span>サポート情報</span>
+      <li class="nav__item__dropdown__support header_menu_trigger _sp">
+        <a><span>サポート情報</span></a>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="15.848"
@@ -182,6 +242,54 @@
             stroke-width="3"
           />
         </svg>
+        <div class="nav__dropdown__list__support sub-menu sp-only">
+          <div class="nav__dropdown__list">
+            <ul class="nav__dropdown__list__first">
+              <li>
+                <a href="/whitepaper">
+                  <span>お役立ちコラム</span>
+                  {% include 'component/icons/arrow-right-long.njk' %}
+                </a>
+              </li>
+
+              <li>
+                <a href="/case_list">
+                  <span>導入事例</span>
+                  {% include 'component/icons/arrow-right-long.njk' %}
+                </a>
+              </li>
+
+              <li>
+                <a href="/faq">
+                  <span>よくある質問</span>
+                  {% include 'component/icons/arrow-right-long.njk' %}
+                </a>
+              </li>
+            </ul>
+
+            <div class="nav__dropdown__back">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 9.198 9.679"
+              >
+                <g
+                  id="矢印アイコン_左3"
+                  data-name="矢印アイコン　左3"
+                  transform="translate(22.934) scale(-1, 1)"
+                >
+                  <path
+                    id="Path_43786"
+                    data-name="Path 43786"
+                    d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                    fill="#00758c"
+                  />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
       </li>
     </ul>
     <div class="nav__button">
@@ -195,259 +303,6 @@
       </div>
       <div class="nav__list__button">
         <a href="/contact/">ご相談・お問い合わせ</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="nav__dropdown__list__search sp-only">
-    <div class="nav__dropdown__list">
-      <ul class="nav__dropdown__list__first">
-        <li>
-          <a href="#">
-            <span>ビジネスカードを作りたい</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="9.198"
-              height="9.679"
-              viewBox="0 0 9.198 9.679"
-            >
-              <g
-                id="矢印アイコン_右3"
-                data-name="矢印アイコン　右3"
-                transform="translate(-12.736)"
-              >
-                <path
-                  id="Path_43786"
-                  data-name="Path 43786"
-                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-                  fill="#00758c"
-                />
-              </g>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <span>業務を効率化したい</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="9.198"
-              height="9.679"
-              viewBox="0 0 9.198 9.679"
-            >
-              <g
-                id="矢印アイコン_右3"
-                data-name="矢印アイコン　右3"
-                transform="translate(-12.736)"
-              >
-                <path
-                  id="Path_43786"
-                  data-name="Path 43786"
-                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-                  fill="#00758c"
-                />
-              </g>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <span>福利厚生を充実させたい</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="9.198"
-              height="9.679"
-              viewBox="0 0 9.198 9.679"
-            >
-              <g
-                id="矢印アイコン_右3"
-                data-name="矢印アイコン　右3"
-                transform="translate(-12.736)"
-              >
-                <path
-                  id="Path_43786"
-                  data-name="Path 43786"
-                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-                  fill="#00758c"
-                />
-              </g>
-            </svg>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <span>経費を削減したい</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="9.198"
-              height="9.679"
-              viewBox="0 0 9.198 9.679"
-            >
-              <g
-                id="矢印アイコン_右3"
-                data-name="矢印アイコン　右3"
-                transform="translate(-12.736)"
-              >
-                <path
-                  id="Path_43786"
-                  data-name="Path 43786"
-                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-                  fill="#00758c"
-                />
-              </g>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="/improve_cash_flow">
-            <span>資金繰りを改善したい</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="9.198"
-              height="9.679"
-              viewBox="0 0 9.198 9.679"
-            >
-              <g
-                id="矢印アイコン_右3"
-                data-name="矢印アイコン　右3"
-                transform="translate(-12.736)"
-              >
-                <path
-                  id="Path_43786"
-                  data-name="Path 43786"
-                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-                  fill="#00758c"
-                />
-              </g>
-            </svg>
-          </a>
-        </li>
-      </ul>
-
-      <div class="nav__dropdown__back">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="20"
-          height="20"
-          viewBox="0 0 9.198 9.679"
-        >
-          <g
-            id="矢印アイコン_左3"
-            data-name="矢印アイコン　左3"
-            transform="translate(22.934) scale(-1, 1)"
-          >
-            <path
-              id="Path_43786"
-              data-name="Path 43786"
-              d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-              fill="#00758c"
-            />
-          </g>
-        </svg>
-      </div>
-    </div>
-  </div>
-
-  <div class="nav__dropdown__list__support sp-only">
-    <div class="nav__dropdown__list">
-      <ul class="nav__dropdown__list__first">
-        <li>
-          <a href="/whitepaper">
-            <span>お役立ちコラム</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="9.198"
-              height="9.679"
-              viewBox="0 0 9.198 9.679"
-            >
-              <g
-                id="矢印アイコン_右3"
-                data-name="矢印アイコン　右3"
-                transform="translate(-12.736)"
-              >
-                <path
-                  id="Path_43786"
-                  data-name="Path 43786"
-                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-                  fill="#00758c"
-                />
-              </g>
-            </svg>
-          </a>
-        </li>
-
-        <li>
-          <a href="/case_list">
-            <span>導入事例</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="9.198"
-              height="9.679"
-              viewBox="0 0 9.198 9.679"
-            >
-              <g
-                id="矢印アイコン_右3"
-                data-name="矢印アイコン　右3"
-                transform="translate(-12.736)"
-              >
-                <path
-                  id="Path_43786"
-                  data-name="Path 43786"
-                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-                  fill="#00758c"
-                />
-              </g>
-            </svg>
-          </a>
-        </li>
-
-        <li>
-          <a href="/faq_list">
-            <span>よくある質問</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="9.198"
-              height="9.679"
-              viewBox="0 0 9.198 9.679"
-            >
-              <g
-                id="矢印アイコン_右3"
-                data-name="矢印アイコン　右3"
-                transform="translate(-12.736)"
-              >
-                <path
-                  id="Path_43786"
-                  data-name="Path 43786"
-                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-                  fill="#00758c"
-                />
-              </g>
-            </svg>
-          </a>
-        </li>
-      </ul>
-
-      <div class="nav__dropdown__back">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="20"
-          height="20"
-          viewBox="0 0 9.198 9.679"
-        >
-          <g
-            id="矢印アイコン_左3"
-            data-name="矢印アイコン　左3"
-            transform="translate(22.934) scale(-1, 1)"
-          >
-            <path
-              id="Path_43786"
-              data-name="Path 43786"
-              d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
-              fill="#00758c"
-            />
-          </g>
-        </svg>
       </div>
     </div>
   </div>
