fix page payment com

--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -315,6 +315,10 @@ link: "#material"
           </li>
           {% endfor %}
         </ul>
+        <div class="container">
+          <h4 class="ttl-primary_note">※1 2023年6月現在時点の導入企業数です。</h4>
+        </div>
+      </div>
       </div>
     </div>
   </section>
@@ -405,7 +409,7 @@ link: "#material"
                     支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
-                <div><a href="/contact" class="blue_gradient_btn" href="#">ご相談・お問い合わせ（無料）</a></div>
+                <div><a href="https://shi-harai.com/signup/" class="blue_gradient_btn" target="_blank">今すぐ無料で登録</a></div>
               </summary>
           </div>
           <div href="#" class="card">
