--- a/app/assets/scss/4-pages/_payment_com.scss
+++ b/app/assets/scss/4-pages/_payment_com.scss
@@ -849,6 +849,17 @@
       padding: 0;
       margin-top: 40px;
 
+      .ttl-primary_note {
+        padding-top: 30px;
+        text-align: right;
+        color: #707070;
+        font-size: 16px;
+        @media #{$sp} {
+          text-align: center;
+         font-size: 14px;
+        }
+      }
+
       .card-list {
         display: grid;
         grid-template-columns: repeat(3, minmax(auto, 380px));
