fix image usage guide

--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -335,8 +335,9 @@
     .content-img {
       max-width: 400px;
       position: relative;
+      margin-right: 30px;
       img {
-        max-width: 70%;
+        max-width: 100%;
         object-fit: cover;
         &.img-bot {
           position: absolute;
