--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -177,10 +177,17 @@
       <div class="tooltip-container">
         「CosPro」の仕組みとメリットが3分でわかる!
       </div>
-
-      <div class="btn-container">
-        <a href="" class="blue_gradient_btn">お申し込みはこちら</a>
-        <img src="/assets/img/common/img-overlap-01.png" alt="yourimg" class="card-img"/>
+      
+      <div class="act-more-content">
+        <div class="act-more-content-img">
+          <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+          <img class="secondary-img" src="/assets/img/common/documents_image.png" alt="Documents image 2">
+        </div>
+        <div class="act-more-content-btn">
+          <a href="#" class="blue_gradient_btn">
+            お申し込みはこちら
+          </a>
+        </div>
       </div>
     </div>
   </section>
