change text follow request

--- a/app/assets/scss/4-pages/_cospro.scss
+++ b/app/assets/scss/4-pages/_cospro.scss
@@ -95,10 +95,11 @@
             bottom: -30px;
             div {
               font-size: 24px;
+              line-height: 27px;
               margin-top: 10px;
               text-align: start;
               background-color: #0297b5;
-              padding: 15px 10px;
+              padding: 15px 20px;
               font-weight: bold;
 
               .font-smaller {
