--- a/app/pages/catalog_detail/index.njk
+++ b/app/pages/catalog_detail/index.njk
@@ -21,7 +21,7 @@
     <div class="container">
       <section class="section-content">
         <div class="section-content-sub_title">
-          <h4 class="ttl-quaternary">お申込み後、リアルタイムでお送りいたします!</h4>
+          <h4 class="ttl-quaternary">お申し込み後、リアルタイムでお送りいたします!</h4>
         </div>
         <h1 class="ttl-primary">サービス資料名が入ります。サービス資料名が入ります。サービス資料名が入ります。サービス資料名</h1>
 
@@ -55,7 +55,7 @@
 
       <section class="section-form">
         <form class="form-primary">
-          <h2 class="form-title">ダウンロード申込みフォーム</h2>
+          <h2 class="form-title">ダウンロード申し込みフォーム</h2>
 
           <div class="form-section company-name-field">
             <label class="form-ttl">
