--- a/app/pages/contact/index.njk
+++ b/app/pages/contact/index.njk
@@ -33,7 +33,7 @@
 
   <section class="section-primary">
     <div class="container-1200">
-      <p class="section-ttl">導入前のご相談・ご質問を受け付けています。お気軽にお問い合わせください。2営業日以内に回答いたします。</p>
+      <p class="section-ttl">導入前のご相談・ご質問を承ります。お気軽にお問い合わせください。2営業日以内に回答いたします。</p>
 
       <div class="form-primary">
         <div class="form-section product-field">
