--- a/app/pages/contact_thanks/index.njk
+++ b/app/pages/contact_thanks/index.njk
@@ -22,7 +22,7 @@
     <div class="">
       <h1 class="ttl-primary">ご相談・お問い合わせありがとうございます。</h1>
 
-      <div class="ttl-tertiary"><strong>2営業日以内に</strong> <span>担当者より連絡させていただきます。 <br>
+      <div class="ttl-tertiary"><strong>2営業日以内に</strong> <span>担当者より連絡いたします。 <br>
           もうしばらくお待ちください。</span></div>
 
       <a href="/" class="bondi_blue_btn">
@@ -43,7 +43,7 @@
     <div class="container-1200">
       <h1 class="ttl-primary">ご相談・お問い合わせありがとうございます。</h1>
 
-      <h3 class="ttl-tertiary"><strong>2営業日以内に</strong> <span>担当者より連絡させていただきます。 <br>
+      <h3 class="ttl-tertiary"><strong>2営業日以内に</strong> <span>担当者より連絡いたします。 <br>
           もうしばらくお待ちください。</span></h3>
 
       <a href="#" class="bondi_blue_btn">
