--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -92,7 +92,7 @@
   </section>
   <section class="text-banner-section">
     <div class="banner__title">
-      <h3 class="ttl-tertiary">導入前のご質問・ご相談を受け付けています。<br>お気軽にお問い合わせください</h3>
+      <h3 class="ttl-tertiary">導入前のご質問・ご相談を承ります。<br>お気軽にお問い合わせください</h3>
       <div class="quinary-btn">
         <a href="/contact/" class="blue_gradient_btn">導入のご相談・お問い合わせ（無料）</a>
       </div>
@@ -102,7 +102,7 @@
   <section class="octonary-section">
     <div>
       <div class="ttl-notice">CONTACT</div>
-      <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
+      <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問い合わせ</h3>
       <div class="useful-wp container">
         <div class="containers">
           <div class="flex jcC gap60">
@@ -111,17 +111,16 @@
                 <div class="card__box--ttl">サービス資料ダウンロードはこちら</div>
                 <div class="card__box--txt">クレディセゾンのソリューションの詳細が分かる
                   <br>
-                  サービス資料をダウンロードいただけます。
+                  サービス資料をダウンロードできます。
                 </div>
                 <div><a class="blue_gradient_btn" href="/catalog_list/">サービス資料ダウンロード</a></div>
               </summary>
             </div>
             <div href="/contact/" class="card">
               <summary class="card__box">
-                <div class="card__box--ttl">ご相談・お問合せはこちら</div>
-                <div class="card__box--txt">各種ソリューションに関するお問合せは
-                  <br>
-                  サービス資料をダウンロードいただけます。
+                <div class="card__box--ttl">ご相談・お問い合わせはこちら</div>
+                <div class="card__box--txt">中小企業様や個人事業主様のよくある課題に対して解決のヒントに<br>
+                なる資料を無料でご提供しています。ぜひご活用ください。  
                 </div>
                 <div><a class="blue_gradient_btn" href="/contact/">お気軽にお問い合わせください。</a></div>
               </summary>
