--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -43,9 +43,9 @@
           <div class="anc01__content">
             <h1 class="anc01__content-head">よくあるご質問</h1>
             <p class="anc01__content-detail">
-              お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact">お問い合わせ</a>より、お気軽に連絡ください。
+              この他にご質問がある方は、<a href="/contact">お問い合わせ</a>より、お気軽に連絡ください。
               <br>
-              2営業日以内に担当者からご連絡させて頂きます。
+              2営業日以内に担当者からご連絡差し上げます。
             </p>
           </div>
         </div>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="card__info-content">
                       <h2>サービス内容について <br> 詳しく知りたい方はこちら</h2>
-                      <span>支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。</span>
+                      <span>支払い.comのサービス資料をダウンロードできます。フォームご入力後、リアルタイムに送付いたします。</span>
                     </div>
 
                   </div>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="card__info-content">
                       <h2>利用イメージを <br> 知りたい方はこちら</h2>
-                      <span>Webから無料登録してすぐにお試しいただけます。面倒な面談や、書類提出は必要ありません。</span>
+                      <span>Webから無料登録してすぐにお試しできます。面倒な面談や、書類提出は必要ありません。</span>
                     </div>
 
                   </div>
