--- a/app/pages/seminar_form/index.njk
+++ b/app/pages/seminar_form/index.njk
@@ -10,7 +10,7 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [{
-  text:"セミナー動画視聴申込",
+  text:"セミナー動画視聴申し込み",
   link:"#"
   }] %}
 
@@ -27,7 +27,7 @@
 <main class="seminar-form-page form-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h1 class="ttl-header">セミナー動画視聴申込</h1>
+      <h1 class="ttl-header">セミナー動画視聴申し込み</h1>
     </div>
   </section>
 
