--- a/app/pages/strength/index.njk
+++ b/app/pages/strength/index.njk
@@ -130,8 +130,7 @@
       <h2 class="ttl-secondary">個人事業主から中小企業からまで</h2>
 
       <div class="section-wrapper">
-        <p>立場がかわれば最適なサービスは異なるものです。クレディセゾンでは、個人事業主様、<br>中小企業様から大企業様向けサービスまで幅広くラインアップしています。
-        </p>
+        <p>立場がかわれば最適なサービスは異なるものです。クレディセゾンでは、ビジネス規模に合わせたラインナップを用意しています。</p>
 
         <div class="section-btn flex gap30">
           <a href="/sole_proprietorship/" class="bondi_blue_btn">
