--- a/app/pages/business_efficiency/index.njk
+++ b/app/pages/business_efficiency/index.njk
@@ -420,7 +420,10 @@
     <h3 class="ttl-tertiary">
       <span><strong>「わかりやすい効果」</strong>と<strong>「メリット」</strong>をご提供します</span>
       <div class="tooltip">
-        <h4 class="tooltip__content">業務効率化をご検討中の中小企業・個人事業主の皆様へ</h4>
+        <div class="tooltip-container">
+          <h4 class="tooltip__content">業務効率化をご検討中の中小企業・個人事業主の皆様へ</h4>
+        </div>
+
       </div>
     </h3>
     <div class="useful-wp container">
