--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -286,7 +286,11 @@
     <div class="card-type22">
       <h3 class="ttl-tertiary"><span><strong>素早く・手軽に解決できるサービス</strong>をご提供します</span>
         <div class="tooltip">
-          <h4 class="tooltip__content">資金繰りや資金調達にお悩みの方へ</h4>
+          <div class="tooltip-container">
+            <h4 class="tooltip__content">資金繰りや資金調達にお悩みの方へ</h4>
+            <div class="tooltip_path tooltip_left"></div>
+            <div class="tooltip_path tooltip_right"></div>
+          </div>
         </div>
       </h3>
       <div class="useful-wp container">
