--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -302,7 +302,9 @@
     <div class="card-type22">
       <h3 class="ttl-tertiary"><span><strong>従業員の満足度</strong>を高めて<strong>人材が定着する会社</strong>に</span>
         <div class="tooltip">
-          <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者様へ" | safe}}</h4>
+          <div class="tooltip-container">
+            <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者様へ" | safe}}</h4>
+          </div>
         </div>
       </h3>
       <div class="useful-wp container">
