fix text footer and width logo footer

--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -106,7 +106,7 @@
         <div class="containers">
           <ul class="flex jcC gap30 inherit anc__box">
             <li class="light_btn">
-              <a href="/contact/">ご相談・お問合せ</a>
+              <a href="/contact/">ご相談・お問い合わせ</a>
               {% include 'component/icons/priamry-arrow-right.njk' %}
             </li>
             <li class="light_btn">
