--- a/app/assets/scss/4-pages/_seminar_detail.scss
+++ b/app/assets/scss/4-pages/_seminar_detail.scss
@@ -218,6 +218,10 @@
             font-size: 26px;
             color: #0497b5;
             font-weight: bold;
+
+            @media #{$sp} {
+              text-align: left;
+            }
           }
 
           .sub-section-ttl {
