--- a/app/assets/scss/4-pages/_personal.scss
+++ b/app/assets/scss/4-pages/_personal.scss
@@ -136,8 +136,11 @@
       .notification-panel1 {
         margin-bottom: 60px;
         .cash-flow-img {
-          img:hover {
-            transform: scale(1.04);
+          img {
+            transition: all .3s;
+            &:hover {
+              transform: scale(1.04);
+            }
           }
         }
       }
