fix handle click menu sp

--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -146,7 +146,7 @@
         </a>
       </li>
       <li class="nav__item__dropdown__search header_menu_trigger _sp">
-        <a><span>目的から探す</span></a>
+        目的から探す
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="15.848"
@@ -225,7 +225,7 @@
         </div>
       </li>
       <li class="nav__item__dropdown__support header_menu_trigger _sp">
-        <a><span>サポート情報</span></a>
+        サポート情報
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="15.848"
