--- a/app/assets/scss/3-modules/_top-header.scss
+++ b/app/assets/scss/3-modules/_top-header.scss
@@ -220,6 +220,8 @@ header {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        font-size: 14px;
+        font-weight: 500;
 
         a {
           display: flex;
