--- a/app/assets/scss/4-pages/_service.scss
+++ b/app/assets/scss/4-pages/_service.scss
@@ -191,6 +191,8 @@
       img {
         width: 215px;
         height: 136px;
+        object-fit: contain;
+        padding: 0 5px;
       }
 
       .content {
