--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -63,7 +63,7 @@ link:"#"
     <div class="container-1200">
       <div class="section-wrapper">
         <div class="card-section">
-          <img src="/assets/img/service_page/service1.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-03.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="primary">法人与信型ビジネスカード</span>
@@ -80,7 +80,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service2.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-01.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="primary">法人与信型ビジネスカード</span>
@@ -97,7 +97,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service3.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-02.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="primary">法人与信型ビジネスカード</span>
@@ -114,7 +114,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service4.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/american-express-01.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="secondary">個人与信型ビジネスカード</span>
@@ -131,7 +131,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service5.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/american-express-02.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="secondary">個人与信型ビジネスカード</span>
@@ -148,7 +148,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service6.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-04.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="blue">請求書カード払いサービス</span>
@@ -165,7 +165,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service7.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-05.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="blue">請求書カード払いサービス</span>
@@ -183,7 +183,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service8.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-06.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="blue">福利厚生サービス</span>
@@ -199,7 +199,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service9.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-07.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="blue">ローンサービス</span>
@@ -215,7 +215,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service10.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-08.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="blue">経費精算・管理クラウド</span>
@@ -231,7 +231,7 @@ link:"#"
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service11.png" alt="cast flow">
+          <img src="/assets/img/credit_cards/saison-09.png" alt="cast flow">
           <div class="content">
             <div class="title">
               <span class="blue">出張手配サービス</span>
@@ -254,7 +254,7 @@ link:"#"
     <h5 class="ttl-sub">DOCUMENTS</h5>
     <h2 class="ttl-secondary">もっと詳しく知りたい方へ</h2>
     <h3 class="ttl-tertiary">クレディセゾンのビジネスカードやソリューションの詳細がわかる資料をダウンロードいただけます。</h3>
-    <a href="#" class="blue_gradient_btn">サービス資料一覧を見る</a>
+    <a href="/catalog_list/" class="blue_gradient_btn">サービス資料一覧を見る</a>
   </section>
 
   <section class="section-license">
